--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
 
 
     <!-- Soft Skills -->
+<!-- Soft Skills -->
 <section id="soft-skills" class="bg-white py-20">
   <div class="max-w-6xl mx-auto px-6">
     <h3 class="text-3xl font-semibold mb-10">Soft Skills</h3>
@@ -296,55 +297,74 @@
 
       <!-- Communication -->
       <div class="p-6 bg-slate-100 rounded-2xl shadow-sm hover:scale-105 transition-transform duration-300 flex items-center gap-3">
-        <img src="/images/icons/communication.png" alt="Communication" class="w-6 h-6" />
+        <img src="/images/Communication.png" alt="Communication" class="w-6 h-6" />
         <span>Communication</span>
       </div>
 
       <!-- Teamwork -->
       <div class="p-6 bg-slate-100 rounded-2xl shadow-sm hover:scale-105 transition-transform duration-300 flex items-center gap-3">
-        <img src="/images/icons/teamwork.png" alt="Teamwork" class="w-6 h-6" />
+        <img src="/images/Teamwork.png" alt="Teamwork" class="w-6 h-6" />
         <span>Teamwork</span>
       </div>
 
       <!-- Problem Solving -->
       <div class="p-6 bg-slate-100 rounded-2xl shadow-sm hover:scale-105 transition-transform duration-300 flex items-center gap-3">
-        <img src="/images/icons/problem-solving.png" alt="Problem Solving" class="w-6 h-6" />
+        <img src="/images/Problem Solving.png" alt="Problem Solving" class="w-6 h-6" />
         <span>Problem Solving</span>
       </div>
 
       <!-- Time Management -->
       <div class="p-6 bg-slate-100 rounded-2xl shadow-sm hover:scale-105 transition-transform duration-300 flex items-center gap-3">
-        <img src="/images/icons/time-management.png" alt="Time Management" class="w-6 h-6" />
+        <img src="/images/Time Management.png" alt="Time Management" class="w-6 h-6" />
         <span>Time Management</span>
       </div>
 
       <!-- Adaptability -->
       <div class="p-6 bg-slate-100 rounded-2xl shadow-sm hover:scale-105 transition-transform duration-300 flex items-center gap-3">
-        <img src="/images/icons/adaptability.png" alt="Adaptability" class="w-6 h-6" />
+        <img src="/images/Adaptability.png" alt="Adaptability" class="w-6 h-6" />
         <span>Adaptability</span>
       </div>
 
       <!-- Critical Thinking -->
       <div class="p-6 bg-slate-100 rounded-2xl shadow-sm hover:scale-105 transition-transform duration-300 flex items-center gap-3">
-        <img src="/images/icons/critical-thinking.png" alt="Critical Thinking" class="w-6 h-6" />
+        <img src="/images/Critical Thinking.png" alt="Critical Thinking" class="w-6 h-6" />
         <span>Critical Thinking</span>
       </div>
 
       <!-- Leadership -->
       <div class="p-6 bg-slate-100 rounded-2xl shadow-sm hover:scale-105 transition-transform duration-300 flex items-center gap-3">
-        <img src="/images/icons/leadership.png" alt="Leadership" class="w-6 h-6" />
+        <img src="/images/Leadership.png" alt="Leadership" class="w-6 h-6" />
         <span>Leadership</span>
       </div>
 
       <!-- Creativity -->
       <div class="p-6 bg-slate-100 rounded-2xl shadow-sm hover:scale-105 transition-transform duration-300 flex items-center gap-3">
-        <img src="/images/icons/creativity.png" alt="Creativity" class="w-6 h-6" />
+        <img src="/images/Creativity.png" alt="Creativity" class="w-6 h-6" />
         <span>Creativity</span>
+      </div>
+
+      <!-- Presentation Skills -->
+      <div class="p-6 bg-slate-100 rounded-2xl shadow-sm hover:scale-105 transition-transform duration-300 flex items-center gap-3">
+        <img src="/images/Presentation Skills.png" alt="Presentation Skills" class="w-6 h-6" />
+        <span>Presentation Skills</span>
+      </div>
+
+      <!-- Project Management -->
+      <div class="p-6 bg-slate-100 rounded-2xl shadow-sm hover:scale-105 transition-transform duration-300 flex items-center gap-3">
+        <img src="/images/Project Management.png" alt="Project Management" class="w-6 h-6" />
+        <span>Project Management</span>
+      </div>
+
+      <!-- Content Creation -->
+      <div class="p-6 bg-slate-100 rounded-2xl shadow-sm hover:scale-105 transition-transform duration-300 flex items-center gap-3">
+        <img src="/images/Content Creation.png" alt="Content Creation" class="w-6 h-6" />
+        <span>Content Creation</span>
       </div>
 
     </div>
   </div>
 </section>
+
 
 
 <!-- AI Tools Section -->
